--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,8 +14,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "assets",
-      "assets/sass"
+      "assets/sass",
+      "assets"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
