--- a/prepros-6.config
+++ b/prepros-6.config
@@ -15,7 +15,8 @@
   "fileTree": {
     "expandedDirs": [
       "assets/sass",
-      "assets"
+      "assets",
+      "assets/style"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
