--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,18 +5,23 @@
   "fileConfigs": [
     {
       "path": "assets/sass/style.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"assets/style/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"assets/style/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "README.md",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"compiler-markdown\":{\"enabled\":true,\"sanitize\":false,\"githubFlavored\":false,\"wrapWithHtml\":false}}"
+    },
+    {
+      "path": "assets/style/style.css",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "assets/sass",
       "assets",
-      "assets/style"
+      "assets/style",
+      "assets/images"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
